# pegaso

./: AGENTS.md  README.md  pyproject.toml
docs/: TUTORIAL.md
examples/adk_file_assistant/: .env.example  README.md  __init__.py  agent.py
src/pegaso/: __init__.py
src/pegaso/capabilities/: __init__.py
src/pegaso/capabilities/bigquery/: __init__.py  _serialization.py  contract.py  descriptor.py  factory.py  local.py  mcp.py  mock.py
src/pegaso/capabilities/git/: __init__.py  contract.py  descriptor.py  factory.py  local.py  mcp.py
src/pegaso/capabilities/local_files/: __init__.py  contract.py  descriptor.py  local.py  security.py
src/pegaso/core/: __init__.py  capability.py  descriptor.py  errors.py  mcp_client.py  registry.py
src/pegaso/integrations/: __init__.py  google_adk.py
tests/: conftest.py  test_bigquery.py  test_core.py  test_git.py  test_google_adk.py  test_local_files.py
