[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pegaso"
version = "0.1.0"
description = "A capability library for intelligent systems"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
adk = ["google-adk>=1.0.0"]
git-mcp = ["mcp>=1.0", "mcp-server-git>=2025.7.1"]
bigquery = ["google-cloud-bigquery>=3.27.0"]
bigquery-mcp = [
    "mcp>=1.0",
    "mcp-server-bigquery>=0.3.2",
    "google-cloud-bigquery>=3.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pegaso"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
